[project]
name = "rock"
version = "0.1.0"
description = "A library for financial data and services"
authors = [{ name = "wsc0der", email = "wsc0der@outlook.com" }]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.8"
dependencies = [
    "numpy==2.1.3",
    "matplotlib==3.9.3",
    "xlrd==2.0.1",
    "requests~=2.32.3",
    "pandas~=2.2.3",
    "efinance @ git+ssh://git@github.com/wsc0der/efinance.git",
]

[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
rock-data-service = "rock.data_service:run"
